--- a/styles.css
+++ b/styles.css
@@ -24,15 +24,6 @@ h1, h2, h3, h4 { font-weight: 400; }
   background-color: white;
   padding: 0 20px 20px 20px;
   cursor: move;
-  /* Fade out while not hovering */
-  opacity: 0.65;
-  zoom: 0.9;
-  transition: opacity 500ms 1s;
-}
-#controls:hover {
-  /* Fade in while hovering */
-  opacity: 0.95;
-  transition-delay: 0;
 }
 
 /* Position and style citation */
@@ -41,6 +32,10 @@ h1, h2, h3, h4 { font-weight: 400; }
   bottom: 10px;
   left: 10px;
   font-size: 12px;
+}
+
+.credits {
+  font-size: 0.9rem;
 }
 
 /* If not using map tiles, show a white background */
