--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,54 @@
+/* navbar */
+
+.navbar {
+    background-color: #FFF;
+    -webkit-transition: padding .3s;
+    -moz-transition: padding .3s;
+    transition: padding .3s;
+    border: none;
+}
+
+.navbar .navbar-nav {
+    float: right;
+    padding-right: 100px;
+    padding-top: 25px;
+}
+
+.navbar-default .navbar-nav>li>a {
+  	font-family: 'Open Sans', sans-serif;
+  	font-size: 12px;
+    color: #000;
+    text-transform: uppercase;
+    background: #FFF;
+    position: relative;
+    display: block;
+    padding: 10px 15px;
+}
+
+.navbar-default .navbar-brand {
+    font-size: 30px;
+    color: #7d7da9;
+}
+
+.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
+    color: #555;
+    background-color: #FFF;
+}
+
+.navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>li>a:hover {
+    background-color: rgb(222, 222, 222);
+}
+
+.nav-tabs {
+    padding-top: 50px;
+}
+
+.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
+    color: #ffffff;
+    background-color: #737373;
+}
+
+
 input[type="number"] {
   max-width: 80%;
 }
@@ -12,11 +63,60 @@ div.outer {
   padding: 0;
 }
 
+body {
+  font-family: 'Source Sans Pro', sans-serif;
+  margin-bottom : 150px;
+}
+
+element.style {
+    padding-top: 50px;
+}
+
+/* caixas */
+
+a {
+    color: #727272;
+}
+
+a:focus, a:hover {
+    color: #727272;
+    text-decoration: none;
+}
+
+.nav-tabs>li>a {
+    margin-right: 2px;
+    line-height: 1.42857143;
+    border: 1px solid #ffffff;
+    background-color: #a02021b5;
+    color: white;
+    border-radius: 4px 4px 0 0;
+}
+
+.nav-tabs>li>a:hover {
+    border-color: #eee #eee #ddd;
+    background: #a0202199;
+}
+
+.nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover {
+    color: #fff;
+    cursor: default;
+    background-color: #a02021;
+    border: 1px solid #ddd;
+    border-bottom-color: transparent;
+}
+
+.nav-tabs>li>a {
+    margin-right: 2px;
+    line-height: 1.42857143;
+    color: white;
+    border-radius: 4px 4px 0 0;
+}
+
 /* Customize fonts */
-body, label, input, button, select { 
+/*body, label, input, button, select { 
   font-family: 'Helvetica Neue', Helvetica;
   font-weight: 200;
-}
+}*/
 h1, h2, h3, h4 { font-weight: 400; }
 
 #controls {
